--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_favoritefeature">Favorite</string>
+    <string name="hello_user_nwhat_movies_today">Hello User, \nWhat Movies Today?</string>
+    <string name="image_button_favorite">image button favorite</string>
+    <string name="image_back_drop">image back drop</string>
+    <string name="image_button_back">image button back</string>
+    <string name="overview">Overview</string>
+    <string name="image_favorite_border">image favorite border</string>
+    <string name="image_favorite_full">image favorite full</string>
+    <string name="image_logo">image logo</string>
 </resources>
